--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,3 @@
 :root {
-	--gray: #686868;
-	--title: 'Gugi', cursive;
-	--handwriting: 'Yellowtail', cursive;
-	--bg-color: #113E53;
-	--cyber: 'Press Start 2P', cursive;
+	--font: 'Manrope', sans-serif;
 }
