--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,8 +21,10 @@ TABLE OF CONTENTS:
 @use 'mixins';
 
 /* 1. Partials =============================== */
+@use 'home';
 
 /* 2. Fonts ================================== */
+@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
 
 /* 3. General ================================ */
 
@@ -39,10 +41,12 @@ body{
 }
 
 #root{
-  @include mixins.default-grid;
+	@include mixins.default-grid;
 }
 
 main{
+	justify-self: center;
+	max-width: 412px;
 	@include mixins.default-grid;
 }
 
