--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,8 @@
 :root {
 	--font: 'Manrope', sans-serif;
+	--teal: #54C4C6;
+	--pink: #FACDD1;
+	--rose: #ED8CAE;
+	--blue: #007275;
+	--gray: #F2F0F2;
 }
