--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -3,34 +3,49 @@
 
 .home{
 	@include mixins.default-grid;
-    background-color: var(--teal);
-    padding: 0 2rem;
+    background-color: var(--rose);
+    position: relative;
+    
+
+    &__container{
+        @include mixins.default-grid;
+        grid-auto-rows: max-content;
+        padding: 0 2rem;
+        z-index: 1;
+    }
 
 	&__heading{
         text-align: center;
-        margin-top: 4rem;
+        place-self: center center;
+        margin-top: 0.25rem;
         font-weight: bold;
-        color: var(--gray);
-        font-size: 1.95rem;
-        text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
+        color: var(--blue);
+        font-size: 2.2rem;
+        line-height: 1.1;
+        width: 90%;
 	}
 
-    &__subheading{
-        color: var(--gray);
-        text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
-        font-size: 1.4rem;
-        margin: 2.25rem 0 2.25rem;
+    &__accent{
+        position: absolute;
+        width: 100%;
+        z-index: 0;
+        bottom: 0;
     }
 
-	// &__card-display{
-	// 	@include mixins.default-grid;
-	// 	padding: 2rem 3%;
-	// 	grid-column-gap: 3%;
-	// 	grid-row-gap: 7rem;
-	// 	justify-content: center;
-	// 	grid-template-columns: repeat(auto-fit, 19rem);
-    //     margin: 2rem 1.75rem 11rem;
-	// }
+    &__link{
+        margin: 2.5rem 0 0;
+        width: 2rem;
+    }
+
+	&__logo{
+        color: white;
+        font-size: 1.4rem;
+    }
+
+    &__row-display{
+        margin: 2rem 0 11.5rem;
+
+    }
 
     .row{
         display: flex;
@@ -45,18 +60,16 @@
         }
 
         &__image-slot{
-            @include mixins.default-grid;
-            width: 5rem;
-            height: 5rem;
-            background-color: var(--gray);
             padding: 0.25rem;
             margin-right: 1rem;
         }
 
         &__image{
-            font-size: 3.75rem;
-            margin: auto;
-            color: var(--blue);
+            @include mixins.default-img;
+            height: 5rem;
+            width: 5rem;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+            background: rgba(255,255,255, 0.85);
         }
 
         &__title{
@@ -64,6 +77,7 @@
             font-size: 1.1rem;
             align-self: center;
             font-weight: bold;
+            line-height: 1.5rem;
         }
     }
 }
