--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,7 +24,7 @@ TABLE OF CONTENTS:
 @use 'home';
 
 /* 2. Fonts ================================== */
-@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;800&display=swap');
 
 /* 3. General ================================ */
 
