--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -22,7 +22,7 @@
         color: var(--blue);
         font-size: 2.2rem;
         line-height: 1.1;
-        width: 90%;
+        width: 85%;
 	}
 
     &__accent{
@@ -44,7 +44,7 @@
 
     &__row-display{
         margin: 2rem 0 11.5rem;
-
+        justify-self: center;
     }
 
     .row{
