--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -6,6 +6,7 @@
     background-color: var(--rose);
     position: relative;
     max-width: 414px;
+    grid-auto-rows: max-content;
     
     &__container{
         @include mixins.default-grid;
@@ -17,7 +18,6 @@
 	&__heading{
         text-align: center;
         place-self: center center;
-        margin-top: 0.25rem;
         font-weight: bold;
         color: var(--blue);
         font-size: 2.2rem;
@@ -30,16 +30,6 @@
         width: 100%;
         z-index: 0;
         bottom: 0;
-    }
-
-    &__link{
-        margin: 2.5rem 0 0;
-        width: 2rem;
-    }
-
-	&__logo{
-        color: white;
-        font-size: 1.4rem;
     }
 
     &__row-display{
