--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -18,6 +18,7 @@
 	&__heading{
         text-align: center;
         place-self: center center;
+        margin-top: 0.25rem;
         font-weight: bold;
         color: var(--blue);
         font-size: 2.2rem;
