--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,8 @@
 :root {
 	--font: 'Manrope', sans-serif;
-	--teal: #95efb5;
-	--pink: #fed1d6;
-	--rose: #f36dbd;
-	--blue: #202f71;
+	--teal: #54C4C6;
+	--pink: #FACDD1;
+	--rose: #ED8CAE;
+	--blue: #007275;
+	--gray: #F2F0F2;
 }
