mom mode styles

--- a/src/styles/_top-row.scss
+++ b/src/styles/_top-row.scss
@@ -7,6 +7,10 @@
     height: 4rem;
     padding: 0 2rem;
 
+    &_mom-mode{
+        background: #191919;
+    }
+
     &__link{
         place-self: center start;
         width: 2rem;
