--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,7 +28,7 @@ TABLE OF CONTENTS:
 
 
 /* 2. Fonts ================================== */
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap');
 
 /* 3. General ================================ */
 
