--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -16,7 +16,7 @@
         text-align: center;
         place-self: center center;
         margin-top: 0.25rem;
-        font-weight: bold;
+        font-weight: 800;
         color: var(--blue);
         font-size: 2.2rem;
         line-height: 1.1;
@@ -34,7 +34,7 @@
 
         &__rank{
             color: var(--blue);
-            font-weight: bold;
+            font-weight: 800;
             margin: auto 0;
             width: 4rem;
             font-size: 2rem;
@@ -57,7 +57,7 @@
             color: black;
             font-size: 1.1rem;
             align-self: center;
-            font-weight: bold;
+            font-weight: 800;
             line-height: 1.5rem;
         }
     }
