--- a/src/styles/_mom-mode.scss
+++ b/src/styles/_mom-mode.scss
@@ -32,11 +32,13 @@
     }
 
     &__container{
+        @include mixins.default-grid;
         padding: 2rem;
     }
 
     .data-row{
         position: relative;
+        margin-bottom: 2rem;
         
         &__heading{
             font-weight: 600;
@@ -47,7 +49,6 @@
         &__text{
             font-size: 0.9rem;
             opacity: 0.7;
-            margin-bottom: 2rem;
         }
 
         &__button{
@@ -63,11 +64,72 @@
         }
     }
 
+    .account-row{
+        @include mixins.default-grid;
+        margin-bottom: 2rem;
+
+        &__image-slot{
+            @include mixins.default-grid;
+            grid-row: 1/3;
+            grid-column: 1/2;
+            background: #242424;
+            width: 3rem;
+            height: 3rem;
+        }
+
+        &__logo{
+            place-self: center center;
+            font-size: 1.5rem;
+            color: var(--pink);
+        }
+
+        &__heading{
+            grid-row: 1/2;
+            grid-column: 1/2;
+            margin-left: 4rem;
+            margin-top: 0.3rem;
+        }
+
+        &__text{
+            grid-row: 2/3;
+            grid-column: 1/2;
+            margin-left: 4rem;
+            margin-top: 0.1rem;
+            font-size: 0.85rem;
+            opacity: 0.7;
+        }
+
+        &__arrow{
+            grid-row: 1/3;
+            grid-column: 1/2;
+            place-self: center end;
+            opacity: 0.7;
+            cursor: pointer;
+        }
+    }
+
+    .mom-mode{
+        &__heading{
+            font-weight: 600;
+            opacity: 0.9;
+            margin-bottom: 0.5rem;
+        }
+
+        &__text{
+            font-size: 0.9rem;
+            opacity: 0.7;
+            margin-bottom: 1rem;
+            line-height: 1.35;
+        }
+    }
+
     &__switch{
         position: relative;
         display: inline-block;
         width: 60px;
         height: 34px;
+        place-self: center start;
+        margin-bottom: 1rem;
     }
 
     &__checkbox{
@@ -76,11 +138,11 @@
         height: 0;
         
         &:checked + .mom-mode__slider{
-            background-color: #2196F3;
+            background-color: var(--pink);
         }
 
         &:focus + .mom-mode__slider{
-            box-shadow: 0 0 1px #2196F3;
+            box-shadow: 0 0 1px var(--pink);
         }
 
         &:checked + .mom-mode__slider:before{
@@ -113,6 +175,56 @@
             -webkit-transition: .4s;
             transition: .4s;
             border-radius: 50%;
+        }
+    }
+
+    .date-row{
+        margin-bottom: 2rem;
+
+        &__heading{
+            margin-bottom: 0.5rem;
+        }
+
+        &__input{
+            font-family: var(--font);
+            border-radius: 0.7rem;
+            padding: 0.2rem 0.25rem;
+        }
+    }
+
+    .cancel{
+        font-size: 0.9rem;
+        opacity: 0.7;
+        line-height: 1.35;
+        margin-bottom: 2rem;
+    }
+
+    .nav-row{
+        display: flex;
+        position: absolute;
+        bottom: 0;
+        justify-content: space-around;
+        width: 100%;
+        height: 6rem;
+
+        &__item{
+            @include mixins.default-grid;
+            grid-auto-rows: max-content;
+            cursor: pointer;
+        }
+
+        &__icon{
+            color: white;
+            opacity: 0.7;
+            place-self: center center;
+            margin-bottom: 0.55rem;
+            font-size: 1.4rem;
+        }
+
+        &__caption{
+            font-size: 0.8rem;
+            color: white;
+            opacity: 0.7;
         }
     }
 }
