--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,6 +25,8 @@ TABLE OF CONTENTS:
 @use 'top-row';
 @use 'bottom-row';
 @use 'mom-mode';
+@use 'wrapped';
+@use 'share-row';
 
 
 /* 2. Fonts ================================== */
