--- a/src/styles/_bottom-row.scss
+++ b/src/styles/_bottom-row.scss
@@ -12,40 +12,40 @@
     color: var(--rose);
     font-size: 0.9rem;
 
-    &_slide2{
-        background-color: var(--pink);
-        color: var(--blue);
-    }
+    // &_slide2{
+    //     background-color: var(--pink);
+    //     color: var(--blue);
+    // }
 
-    &_slide3{
-        background-color: var(--teal);
-        color: var(--rose);
-    }
+    // &_slide3{
+    //     background-color: var(--teal);
+    //     color: var(--rose);
+    // }
 
-    &_slide4{
-        background-color: var(--pink);
-        color: var(--blue);
-    }
+    // &_slide4{
+    //     background-color: var(--pink);
+    //     color: var(--blue);
+    // }
 
-    &_slide5{
-        background-color: var(--teal);
-        color: var(--rose);
-    }
+    // &_slide5{
+    //     background-color: var(--teal);
+    //     color: var(--rose);
+    // }
 
-    &_slide6{
-        background-color: var(--pink);
-        color: var(--blue);
-    }
+    // &_slide6{
+    //     background-color: var(--pink);
+    //     color: var(--blue);
+    // }
 
-    &_slide7{
-        background-color: var(--teal);
-        color: var(--rose);
-    }
+    // &_slide7{
+    //     background-color: var(--teal);
+    //     color: var(--rose);
+    // }
 
-    &_slide8{
-        background-color: var(--teal);
-        color: var(--rose);
-    }
+    // &_slide8{
+    //     background-color: var(--teal);
+    //     color: var(--rose);
+    // }
 
 
     &__link{
