--- a/src/styles/_wrapped.scss
+++ b/src/styles/_wrapped.scss
@@ -2,7 +2,7 @@
 @use 'mixins';
 
 .wrapped{
-    max-width: 414px;
+    max-width: 360px;
 }
 
 .swiper {
@@ -34,44 +34,137 @@
     background: var(--rose);
     padding: 0 2.5rem;
     line-height: 1.15;
+    overflow: clip;
 
-    &_slide2{
-        background: var(--blue);
-    }
+    // &_slide2{
+    //     background: var(--blue);
+    // }
 
     &_slide3{
-        background: var(--pink);
+        // background: var(--pink);
+        grid-template-rows: 5.25rem;
+
     }
 
-    &_slide4{
-        background: var(--teal);
-    }
+    // &_slide4{
+    //     background: var(--teal);
+    // }
 
-    &_slide5{
-        background: var(--gray);
-    }
+    // &_slide5{
+    //     background: var(--gray);
+    // }
 
-    &_slide6{
-        background: var(--rose);
-    }
+    // &_slide6{
+    //     background: var(--rose);
+    // }
 
-    &_slide7{
-        background: var(--blue);
-    }
+    // &_slide7{
+    //     background: var(--blue);
+    // }
 
-    &_slide8{
-        background: var(--pink);
-    }
+    // &_slide8{
+    //     background: var(--pink);
+    // }
 }
+
+
 
 .slide-1{
     &__heading{
-        text-align: center;
-        place-self: center center;
-        font-size: 1.9rem;
+        @include mixins.slide-heading;
         text-transform: uppercase;
+        place-self: center center;
         color: var(--blue);
-        font-weight: 800;
     }
 }
 
+.slide-2, .slide-4{
+
+    &__content-box{
+        place-self: center center;
+        @include mixins.default-grid;
+    }
+
+    &__heading{
+        @include mixins.slide-heading;
+        margin-bottom: 0.5rem;
+        color: var(--blue);
+    }
+
+    &__ellipsis{
+        justify-self: center;
+        font-size: 1.9rem;
+        color: var(--blue);
+    }
+}
+
+.slide-3{
+
+    &__heading{
+        @include mixins.slide-heading;
+        @include mixins.list-slide-heading;
+    }
+
+    .row{
+        @include mixins.default-grid;
+        grid-template-columns: max-content 1fr;
+        margin-bottom: 0.75rem;
+        font-size: 0.9rem;
+
+        &__image-slot{
+            grid-column: 1/2;
+            grid-row: 1/3;
+            margin-right: 1rem;
+        }
+
+        &__title{
+            grid-column: 2/3;
+            grid-row: 1/2;
+            place-self: end start;
+            font-weight: 600;
+            margin-bottom: 0.1rem;
+        }
+
+        &__artist{
+            grid-column: 2/3;
+            grid-row: 2/3;
+            place-self: start start;
+            opacity: 0.95;
+            margin-top: 0.1rem;
+        }
+    }
+}
+
+.slide-4{
+    &__heart{
+        font-size: 1.25rem;
+    }
+}
+
+.slide-5{
+    &__heading{
+        @include mixins.slide-heading;
+        @include mixins.list-slide-heading;
+    }
+
+    .row{
+        @include mixins.artist-row;
+
+        &__rank{
+            width: 3rem;
+            color: var(--blue);
+            font-size: 1.5rem;
+        }
+
+        &__image-slot{
+            padding: 0.25rem;
+            margin-right: 0rem;
+            width: 5rem;
+        }
+
+        &__image{
+            @include mixins.default-img;
+            @include mixins.artist-img;
+        }
+    }
+}
