--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -29,22 +29,39 @@
     }
 
     .row{
-        @include mixins.artist-row;
+        @include mixins.default-grid;
+        margin-bottom: 2.25rem;
+        grid-template-columns: 2rem 6.5rem 1fr;
 
         &__rank{
-            width: 4rem;
+            grid-column: 1/2;
+            font-weight: 800;
             color: var(--blue);
-            font-size: 2rem;
+            font-size: 1.5rem;
+            place-self: center center;
         }
 
         &__image-slot{
+            grid-column: 2/3;
             padding: 0.25rem;
-            width: 5rem;
+            place-self: center center;
         }
 
         &__image{
             @include mixins.default-img;
-            @include mixins.artist-img;
+            height: 5rem;
+            width: 5rem;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+            background: rgba(255,255,255, 0.85);
         }
+
+        &__title{
+            grid-column: 3/4;
+            color: black;
+            font-size: 1.1rem;
+            place-self: center start;
+            font-weight: 800;
+            line-height: 1.5rem;
+          }
     }
 }
