--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -61,27 +61,10 @@
   margin: 1.5rem 0 0;
 }
 
-@mixin artist-row{
-  display: flex;
-  margin-bottom: 2.25rem;
+// @mixin artist-row{
 
-  &__rank{
-    font-weight: 800;
-    margin: auto 0;
-  }
+// }
 
-  &__title{
-    color: black;
-    font-size: 1.1rem;
-    align-self: center;
-    font-weight: 800;
-    line-height: 1.5rem;
-  }
-}
+// @mixin artist-img{
 
-@mixin artist-img{
-  height: 5rem;
-  width: 5rem;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  background: rgba(255,255,255, 0.85);
-}
+// }
