--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,7 @@ TABLE OF CONTENTS:
 @use 'mom-mode';
 @use 'wrapped';
 @use 'share-row';
+@use 'gift';
 
 
 /* 2. Fonts ================================== */
