--- a/src/styles/_gift.scss
+++ b/src/styles/_gift.scss
@@ -104,7 +104,7 @@
             grid-column: 1/-1;
             margin-top: 2rem;
             background-color: var(--gray);
-            padding: 0.75rem 1.75rem;
+            padding: 0.65rem 1.65rem;
             place-self: center center;
             outline: none;
             border: none;
@@ -113,6 +113,7 @@
             font-weight: 600;
             cursor: pointer;
             color: black;
+            font-size: 0.95rem;
         }
     }
 }
