--- a/src/styles/_bottom-row.scss
+++ b/src/styles/_bottom-row.scss
@@ -43,8 +43,28 @@
     }
 
     &_slide8{
+        background-color: var(--blue);
+        color: var(--pink);
+    }
+
+    &_slide9{
         background-color: var(--rose);
         color: var(--blue);
+    }
+
+    &_slide10{
+        background-color: var(--pink);
+        color: var(--blue);
+    }
+
+    &_slide11{
+        background-color: var(--rose);
+        color: var(--blue);
+    }
+
+    &_slide12{
+        background-color: var(--blue);
+        color: var(--pink);
     }
 
 
