--- a/src/styles/_bottom-row.scss
+++ b/src/styles/_bottom-row.scss
@@ -63,8 +63,8 @@
     }
 
     &_slide12{
-        background-color: var(--blue);
-        color: var(--pink);
+        background-color: var(--pink);
+        color: var(--blue);
     }
 
 
