--- a/src/styles/_bottom-row.scss
+++ b/src/styles/_bottom-row.scss
@@ -37,32 +37,32 @@
         color: var(--blue);
     }
 
-    &_slide7{
-        background-color: var(--rose);
-        color: var(--blue);
-    }
+    // &_slide7{
+    //     background-color: var(--rose);
+    //     color: var(--blue);
+    // }
 
-    &_slide8{
+    &_slide7{
         background-color: var(--blue);
         color: var(--pink);
     }
 
-    &_slide9{
+    &_slide8{
         background-color: var(--rose);
         color: var(--blue);
     }
 
-    &_slide10{
+    &_slide9{
         background-color: var(--pink);
         color: var(--blue);
     }
 
-    &_slide11{
+    &_slide10{
         background-color: var(--rose);
         color: var(--blue);
     }
 
-    &_slide12{
+    &_slide11{
         background-color: var(--pink);
         color: var(--blue);
     }
